# nri_mission

./: README.md
nri_mission_runner/: CMakeLists.txt  error_solving.txt  package.xml
nri_mission_runner/include/nri_mission_runner/: navsat_conversions.hpp  nri_mission_runner.hpp  nri_mission_util.hpp
nri_mission_runner/launch/: nri_mission_runner.launch.py  static_tf_map_odom_baselink.launch.py
nri_mission_runner/src/: main.cpp  nri_mission_runner.cpp
nri_msgs/: CMakeLists.txt  package.xml
nri_msgs/msg/: NriWaypointGps.msg  NriWaypointXyz.msg  NriWaypointlistGps.msg  NriWaypointlistXyz.msg
nri_simple_test/: package.xml  setup.cfg  setup.py
nri_simple_test/nri_simple_test/: gpswaypoint_test.py  gpswaypointmulti_test.py  xyzwaypoint_test.py  xyzwaypointmulti_test.py
